--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Craft</title>
+    <link rel="icon" type="image/svg+xml" href="/public/favLogo.svg" />
   </head>
   <body class="light">
     <div id="root"></div>
