--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Craft</title>
-    <link rel="icon" type="image/svg+xml" href="/public/favLogo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo/favLogo.svg" />
   </head>
   <body class="light">
     <div id="root"></div>
